<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/settingsTitle"
            android:textSize="20sp"
            android:textColor="@color/defaultText"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/placeholderprofilepicture"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/settingUsername"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/defaultText">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settingsEmail"
                android:textSize="12sp"
                android:textColor="@color/defaultText">
            </TextView>

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editProfileButton"
                android:layout_marginVertical="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#80FFFFFF"
                android:layout_marginVertical="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#80F5F5F5">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp"
                        >

                        <ImageView
                            android:id="@+id/notificationLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/baseline_notifications_24"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/notificationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/notificationLogo"
                            android:text="@string/notificationText"
                            android:layout_centerVertical="true"
                            android:textColor="@color/defaultText"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notificationSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp">

                        <ImageView
                            android:id="@+id/notificationLogo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/baseline_notifications_24"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/notificationText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/notificationLogo2"
                            android:text="@string/notificationText"
                            android:layout_centerVertical="true"
                            android:textColor="@color/defaultText"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notificationSwitch2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp">

                        <ImageView
                            android:id="@+id/darkmodeLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/baseline_dark_mode_24" />

                        <TextView
                            android:id="@+id/darkmodeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/darkmodeLogo"
                            android:text="@string/darkmodeText"
                            android:layout_centerVertical="true"
                            android:textColor="@color/defaultText"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/darkmodeSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#80FFFFFF"
                android:layout_marginVertical="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#80F5F5F5">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp">

                        <ImageView
                            android:id="@+id/notificationLogo3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/baseline_notifications_24" />

                        <TextView
                            android:id="@+id/notificationText3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/notificationLogo3"
                            android:text="@string/notificationText"
                            android:layout_centerVertical="true"
                            android:textColor="@color/defaultText"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notificationSwitch3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp">

                        <ImageView
                            android:id="@+id/notificationLogo4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/baseline_notifications_24" />

                        <TextView
                            android:id="@+id/notificationText4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/notificationLogo4"
                            android:text="@string/notificationText"
                            android:layout_centerVertical="true"
                            android:textColor="@color/defaultText"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notificationSwitch4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp">

                        <ImageView
                            android:id="@+id/darkmodeLogo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/baseline_dark_mode_24" />

                        <TextView
                            android:id="@+id/darkmodeText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/darkmodeLogo2"
                            android:layout_centerVertical="true"
                            android:text="@string/darkmodeText"
                            android:textColor="@color/defaultText"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/darkmodeSwitch2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#80FFFFFF"
                android:layout_marginVertical="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#80FFFFFF">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="10dp">
                        <ImageView
                            android:id="@+id/themeLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/baseline_color_lens_24" />
                        <TextView
                            android:id="@+id/themeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/themeText"
                            android:layout_toEndOf="@+id/themeLogo"
                            android:layout_marginStart="10dp"
                            android:layout_centerVertical="true"
                            android:textColor="@color/defaultText"/>
                        <ImageView
                            android:id="@+id/right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/baseline_chevron_right_24"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logoutBtn"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#b23b3b "/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
